--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: Beboelig Bolig
 subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
+email: beboeligbolig@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: # the subpath of your site, e.g. /blog
 url: https://beboelig-bolig.github.io # the base hostname & protocol for your site
