Some url changes

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: ET EiT-prosjekt
 email: beboeligbolig@gmail.com
 description: Et samlested med boliginformasjon for deg som skal leie bolig
 baseurl: # the subpath of your site, e.g. /blog
-url: http://beboeligbolig.no # the base hostname & protocol for your site
+url: https://beboeligbolig.no # the base hostname & protocol for your site
 author:
 street_address:
 city: 
